doc: Update notebook coments

--- a/notebooks/metrics-analysis.ipynb
+++ b/notebooks/metrics-analysis.ipynb
@@ -59,7 +59,7 @@
     "    # Fetch metrics\n",
     "    response = requests.get(LB_URL + \"/metrics\")\n",
     "\n",
-    "    # Output metric data\n",
+    "    # Save metric data\n",
     "    metrics_buffer.append(response.json())\n",
     "\n",
     "    time.sleep(METRIC_INTERVAL)\n",
