doc: Add doc sentence to notebook

--- a/notebooks/metrics-analysis.ipynb
+++ b/notebooks/metrics-analysis.ipynb
@@ -1,10 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "a2a9930b-a195-49d2-8793-e9e6486abd93",
+   "metadata": {},
+   "source": [
+    "The following code starts the multi client script in the background and records load balancer metrics at regular intervals to analyse."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "id": "16bd5bc1-9c45-4607-b524-b0f841e9d891",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
