chore: Describe change in overall average latency

--- a/notebooks/metrics-analysis.ipynb
+++ b/notebooks/metrics-analysis.ipynb
@@ -163,6 +163,14 @@
     "\n",
     "print(f\"Average Overall Latency: {metrics_buffer[-1]['overallLatency']}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cd91ddb-da89-484e-8e90-f72694a51731",
+   "metadata": {},
+   "source": [
+    "As you can see above, utilizing the weighted round robin algorithm with appropriate weights resulted in a 10% decrease in average overall latency from 833ms to 750ms."
+   ]
   }
  ],
  "metadata": {
